force-app/main/default/objects/Lead/fields/Lead_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sequence__c</fullName>
    <label>Lead Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>