force-app/main/default/objects/Lead/fields/Webinar_Attended__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Attended__c</fullName>
    <label>Webinar Attended</label>
    <length>222</length>
    <type>Text</type>
</CustomField>