force-app/main/default/objects/Lead/fields/X2018_Expenses__c.field-meta.xml
<CustomField>
    <fullName>X2018_Expenses__c</fullName>
    <label>2018 Expenses</label>
    <length>18</length>
    <type>Text</type>
</CustomField>