force-app/main/default/objects/Lead/fields/X2019_Expenses__c.field-meta.xml
<CustomField>
    <fullName>X2019_Expenses__c</fullName>
    <label>2019 Expenses</label>
    <length>18</length>
    <type>Text</type>
</CustomField>