force-app/main/default/objects/Lead/fields/X2020_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2020_Revenue__c</fullName>
    <label>2020 Revenue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>