force-app/main/default/objects/Lead/listViews/Building_Your_Brand_for_Not_Attended.listView-meta.xml
<ListView>
    <fullName>Building_Your_Brand_for_Not_Attended</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Andrew Chen_1.21 Building Your Brand for Growth</value>
    </filters>
    <filters>
        <field>Webinar_Attended__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Building Your Brand for Not Attended</label>
</ListView>