force-app/main/default/objects/Lead/listViews/Check_Designer.listView-meta.xml
<ListView>
    <fullName>Check_Designer</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Dseigners</value>
    </filters>
    <label>Check - Designer</label>
</ListView>