force-app/main/default/objects/Lead/listViews/Copy_of_S_Corp_Dec_9th_Attended.listView-meta.xml
<ListView>
    <fullName>Copy_of_S_Corp_Dec_9th_Attended</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Marketer_Dec10th</value>
    </filters>
    <filters>
        <field>Webinar_Attended__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Marketer_Dec10th Attended</label>
</ListView>