force-app/main/default/objects/Lead/listViews/Future_of_Work_Dec17th_Not_Attended.listView-meta.xml
<ListView>
    <fullName>Future_of_Work_Dec17th_Not_Attended</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Future of Work_Dec17th</value>
    </filters>
    <filters>
        <field>Webinar_Attended__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Future of Work_Dec17th Not-Attended</label>
</ListView>