force-app/main/default/objects/Lead/listViews/Leads_Major_Campaign.listView-meta.xml
<ListView>
    <fullName>Leads_Major_Campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Sequence__c</field>
        <operation>contains</operation>
        <value>Major</value>
    </filters>
    <label>Leads - Major Campaign</label>
</ListView>