force-app/main/default/objects/Lead/listViews/LLC_vs_SCorp_Not_Attended.listView-meta.xml
<ListView>
    <fullName>LLC_vs_SCorp_Not_Attended</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>LLC vs S Corp 1-27</value>
    </filters>
    <filters>
        <field>Webinar_Attended__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>LLC vs SCorp Not-Attended</label>
</ListView>