force-app/main/default/objects/Lead/listViews/Test1.listView-meta.xml
<ListView>
    <fullName>Test1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Sequence__c</field>
        <operation>equals</operation>
        <value>Test 1</value>
    </filters>
    <label>Test1</label>
</ListView>